--- a/style.css
+++ b/style.css
@@ -44,8 +44,6 @@ button:active {
 
 #app {
   position: relative;
-border-radius: 12px;
-overflow: hidden;
 }
 #app.basic {
   width: 320px;
@@ -60,8 +58,8 @@ overflow: hidden;
 
 .calculator {
   width: 100%;
-  height: 100%;
-  background: black;
+  height:100%;
+  background: transparent;
   
   display: -webkit-box;
   
@@ -69,22 +67,38 @@ overflow: hidden;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
           flex-direction: column;
+
 }
 
-.calculator-shadow {
-  box-shadow: 50px 20px 20px 50px #f00;
-}
 
 #wrapper .calculator {
   /* box-shadow: 0px 0px 20px 0px #aaa; */
 }
+
+.calculator-shadow {
+  width: 90%;
+  height:90%;
+position: absolute;
+z-index: -5 !important;
+margin: 10% 5%;
+	background: rgba(0,0,0,0.25);
+	box-shadow: 0px 
+				0px 
+					32px 
+					32px 
+						rgba(0,0,0,0.25);
+}
+
 
 .calculator-display {
   color: white;
   background: #1c191c;
   line-height: 130px;
   font-size: 6em;
-  
+	border-top-right-radius: 12px;  
+	border-top-left-radius: 12px;  
+	overflow: hidden;
+
   -webkit-box-flex: 1;
   
           flex: 1;
@@ -108,6 +122,10 @@ overflow: hidden;
   display: -webkit-box;
   
   display: flex;
+	border-bottom-right-radius: 12px;  
+	border-bottom-left-radius: 12px;  
+	overflow: hidden;
+
 }
 
 .calculator .input-keys {
@@ -121,9 +139,7 @@ overflow: hidden;
 
 .calculator .digit-keys {
   background: #e0e0e7;
-  
   display: -webkit-box;
-  
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -139,6 +155,7 @@ overflow: hidden;
   text-align: center;
   line-height: 80px;
 }
+
 .calculator .function-keys .calculator-key {
   font-size: 2em;
 }
@@ -148,6 +165,7 @@ overflow: hidden;
 .calculator .digit-keys .calculator-key {
   font-size: 2.25em;
 }
+
 .calculator .digit-keys .key-0 {
   width: 160px;
   text-align: left;
@@ -171,3 +189,4 @@ overflow: hidden;
   background:  -webkit-gradient(linear, left top, left bottom, from(rgba(252,156,23,1)), to(rgba(247,126,27,1)));
   background:  linear-gradient(to bottom, rgba(252,156,23,1) 0%, rgba(247,126,27,1) 100%);
 }
+
