--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ button {
           user-select: none;
   cursor: pointer;
   outline: none;
-  
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
@@ -54,8 +53,6 @@ button:active {
   height:520px;
 }
 
-
-
 .calculator {
   width: 100%;
   height:100%;
@@ -70,17 +67,16 @@ button:active {
 
 }
 
-
 #wrapper .calculator {
   /* box-shadow: 0px 0px 20px 0px #aaa; */
 }
 
 .calculator-shadow {
-  width: 90%;
-  height:90%;
-position: absolute;
-z-index: -5 !important;
-margin: 10% 5%;
+	width: 90%;
+	height:90%;
+	position: absolute;
+	z-index: -5 !important;
+	margin: 10% 5%;
 	background: rgba(0,0,0,0.25);
 	box-shadow: 0px 
 				0px 
@@ -88,7 +84,6 @@ margin: 10% 5%;
 					32px 
 						rgba(0,0,0,0.25);
 }
-
 
 .calculator-display {
   color: white;
@@ -98,9 +93,7 @@ margin: 10% 5%;
 	border-top-right-radius: 12px;  
 	border-top-left-radius: 12px;  
 	overflow: hidden;
-
   -webkit-box-flex: 1;
-  
           flex: 1;
 }
 
@@ -118,14 +111,11 @@ margin: 10% 5%;
 
 .calculator-keypad {
   height: 400px;
-  
   display: -webkit-box;
-  
   display: flex;
 	border-bottom-right-radius: 12px;  
 	border-bottom-left-radius: 12px;  
 	overflow: hidden;
-
 }
 
 .calculator .input-keys {
@@ -149,9 +139,9 @@ margin: 10% 5%;
 
 .calculator-key {
   width: 80px;
-  height: 80px;
+  height:80px;
   border-top: 1px solid #777;
-  border-right: 1px solid #666;  
+  border-right:1px solid #666;  
   text-align: center;
   line-height: 80px;
 }
@@ -161,6 +151,7 @@ margin: 10% 5%;
 }
 .calculator .function-keys .key-multiply {
   line-height: 50px;
+opacity:0.1 !important;
 }
 .calculator .digit-keys .calculator-key {
   font-size: 2.25em;
